--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -2,7 +2,7 @@
 <html>
     <head> 
         <title>My Website Portfolio</title>
-        <link rel = "stylesheet" href = "CSS\mystyle.css">
+        <link rel = "stylesheet" href = "..\CSS\mystyle.css">
     </head>
     <body>
         <h1>Jeremy Agbanlog</h1>
